--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
 	<head>
 		<title>Militsa Sotirova</title>
 		<link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap" rel="stylesheet">
-    <link href="../styles/home.css" rel="stylesheet">
+    <link href="./styles/home.css" rel="stylesheet">
 	</head>
 
 	<body>
     <div class="centerpiece">
-      <img src="../images/face.jpg" alt="headshot">
+      <img src="./images/face.jpg" alt="headshot">
       <h1>Militsa Sotirova</h1>
       <p>Computer Science student at Cornell University</p>
     </div>
 
     <div class="grid-container">
         <div class="grid-item">
-            <p><a href="./aboutme.html"><strong>About Me</strong></a></p>
+            <p><a href=".views/aboutme.html"><strong>About Me</strong></a></p>
         </div>
 
         <div class="grid-item">
-            <p><a href="./education.html"><strong>Education</strong></a></p>
+            <p><a href=".views/education.html"><strong>Education</strong></a></p>
         </div>
 
         <div class="grid-item">
-            <p><a href="./experience.html"><strong>Experience</strong></a></p>
+            <p><a href=".views/experience.html"><strong>Experience</strong></a></p>
         </div>
 
         <div class="grid-item">
-            <p><a href="./projects.html"><strong>Projects</strong></a></p>
+            <p><a href=".views/projects.html"><strong>Projects</strong></a></p>
         </div>
     </div>
 
 		<footer>
-			<a href="mailto: militsasotirova@gmail.com"><img src="../images/white-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova"><img src="../images/white-github.png" title="github" alt="github"></a>
+			<a href="mailto: militsasotirova@gmail.com"><img src="./images/white-mail.png" title="email" alt="email"></a>
+			<a href="https://github.com/militsasotirova"><img src="./images/white-github.png" title="github" alt="github"></a>
 			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177"><img src="../images/white-linkedin.png" title="linkedin" alt="linkedin"></a>
 		</footer>
 	</body>
