--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     </div>
 
 		<footer>
+			<h3>Contact Me:</h3>
 			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/white-mail.png" title="email" alt="email"></a>
 			<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/white-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/white-linkedin.png" title="linkedin" alt="linkedin"></a>
+			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="./images/white-linkedin.png" title="linkedin" alt="linkedin"></a>
 		</footer>
 	</body>
 </html>
