--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Militsa Sotirova</title>
-		<link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap" rel="stylesheet">
-    <link href="./styles/home.css" rel="stylesheet">
-	</head>
 
-	<body>
+<head>
+    <title>Militsa Sotirova</title>
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap" rel="stylesheet">
+    <link href="./styles/home.css" rel="stylesheet">
+</head>
+
+<body>
     <div class="centerpiece">
-      <img src="./images/face.jpg" alt="headshot">
-      <h1>Militsa Sotirova</h1>
-      <p>Computer Science student at Cornell University</p>
+        <img src="./images/face.jpg" alt="headshot">
+        <h1>Militsa Sotirova</h1>
+        <p>Computer Science student at Cornell University</p>
     </div>
 
     <div class="grid-container">
@@ -31,11 +32,15 @@
         </div>
     </div>
 
-		<footer>
-			<h3>Contact Me:</h3>
-			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/white-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/white-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="./images/white-linkedin.png" title="linkedin" alt="linkedin"></a>
-		</footer>
-	</body>
+    <footer>
+        <h3>Contact Me:</h3>
+        <a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/black-mail.png" title="email"
+                alt="email"></a>
+        <a href="https://github.com/militsasotirova" target="_blank"><img src="./images/black-github.png" title="github"
+                alt="github"></a>
+        <a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
+                src="./images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+    </footer>
+</body>
+
 </html>
