create dark stylesheets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Militsa Sotirova</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap" rel="stylesheet">
-    <link href="./styles/home.css" rel="stylesheet">
+    <link href="./styles/light-home.css" rel="stylesheet">
 </head>
 
 <body>
