adding toggle for light/dark theme

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
     <title>Militsa Sotirova</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap" rel="stylesheet">
-    <link href="./styles/light-home.css" rel="stylesheet">
+    <link href="./styles/light-home.css" rel="stylesheet" id="theme-link">
+    <link href="./styles/toggle.css" rel="stylesheet">
 </head>
 
 <body>
+    <label class="switch">
+        <input type="checkbox" id="togBtn">
+        <div class="slider round">
+            <span class="on">ON</span>
+            <span class="off">OFF</span>
+        </div>
+    </label>
+
     <div class="centerpiece">
         <img src="./images/face.jpg" alt="headshot">
         <h1>Militsa Sotirova</h1>
