--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
     toggleSwitch.addEventListener('change', toggleLightDark, false);
 
     function isDark() {
+        
         return document.cookie.match(/theme=dark/i) != null;
     }
 
     function setTheme() {
         if (isDark()) {
             theme.href = "./styles/dark-home.css";
+            toggleSwitch.change();
         } else {
             theme.href = "./styles/light-home.css";
         }
