saving toggle position

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             t.checked = true;
         } else {
             theme.href = "./styles/light-home.css";
+            var t = document.getElementById("togBtn");
+            t.checked = false;
         }
     }
 
