--- a/index.html
+++ b/index.html
@@ -73,13 +73,15 @@
 
     function setTheme() {
         if (isDark()) {
-            theme.href = "./styles/dark-home.css";
+            theme.href = "../styles/dark-pages.css";
             var t = document.getElementById("togBtn");
             t.checked = true;
+            document.cookie = 'theme=dark';
         } else {
-            theme.href = "./styles/light-home.css";
+            theme.href = "../styles/light-pages.css";
             var t = document.getElementById("togBtn");
             t.checked = false;
+            document.cookie = 'theme=light';
         }
     }
 
