--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
     function setTheme() {
         if (isDark()) {
-            theme.href = "../styles/dark-pages.css";
+            theme.href = "../styles/dark-home.css";
             var t = document.getElementById("togBtn");
             t.checked = true;
             document.cookie = 'theme=dark';
         } else {
-            theme.href = "../styles/light-pages.css";
+            theme.href = "../styles/light-home.css";
             var t = document.getElementById("togBtn");
             t.checked = false;
             document.cookie = 'theme=light';
