--- a/index.html
+++ b/index.html
@@ -52,43 +52,43 @@
     </footer>
 
     <script>
-    const toggleSwitch = document.getElementsByClassName("switch")[0];
-    const theme = document.querySelector("#theme-link");
+        const toggleSwitch = document.getElementsByClassName("switch")[0];
+        const theme = document.querySelector("#theme-link");
 
-    function toggleLightDark(e) {
-        if (e.target.checked) {
-            theme.href = "./styles/dark-home.css";
-            document.cookie = 'theme=dark';
+        function toggleLightDark(e) {
+            if (e.target.checked) {
+                theme.href = "./styles/dark-home.css";
+                document.cookie = 'theme=dark';
+            }
+            else {
+                theme.href = "./styles/light-home.css";
+                document.cookie = 'theme=light';
+            }
         }
-        else {
-            theme.href = "./styles/light-home.css";
-            document.cookie = 'theme=light';
-        }  
-    }
-    toggleSwitch.addEventListener('change', toggleLightDark, false);
+        toggleSwitch.addEventListener('change', toggleLightDark, false);
 
-    function isDark() {
-        console.log(document.cookie);
-        return document.cookie.match(/theme=dark/i) != null;
-    }
-
-    function setTheme() {
-        if (isDark()) {
-            theme.href = "../styles/dark-home.css";
-            var t = document.getElementById("togBtn");
-            t.checked = true;
-            document.cookie = 'theme=dark';
-        } else {
-            theme.href = "../styles/light-home.css";
-            var t = document.getElementById("togBtn");
-            t.checked = false;
-            document.cookie = 'theme=light';
+        function isDark() {
+            console.log('cookie: ' + document.cookie);
+            return document.cookie.match(/theme=dark/i) != null;
         }
-    }
 
-    (function() {
-        setTheme();
-    })();
+        function setTheme() {
+            if (isDark()) {
+                theme.href = "../styles/dark-home.css";
+                var t = document.getElementById("togBtn");
+                t.checked = true;
+                document.cookie = 'theme=dark';
+            } else {
+                theme.href = "../styles/light-home.css";
+                var t = document.getElementById("togBtn");
+                t.checked = false;
+                document.cookie = 'theme=light';
+            }
+        }
+
+        (function () {
+            setTheme();
+        })();
     </script>
 </body>
 
