--- a/education.html
+++ b/education.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Militsa Sotirova</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Space+Mono:400,700&display=swap" rel="stylesheet">
-	<link href="../styles/all-pages.css" rel="stylesheet">
-	<link href="../styles/light-pages.css" rel="stylesheet" id="theme-link">
-	<link href="../styles/toggle.css" rel="stylesheet">
+	<link href="./styles/all-pages.css" rel="stylesheet">
+	<link href="./styles/light-pages.css" rel="stylesheet" id="theme-link">
+	<link href="./styles/toggle.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,8 +19,8 @@
 			</div>
 		</label>
 
-		<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
-		<a href="../index.html">
+		<a href="./index.html"><img src="../images/face.jpg" alt="headshot"></a>
+		<a href="./index.html">
 			<h1>Militsa Sotirova</h1>
 		</a>
 
@@ -47,7 +47,7 @@
 	<div class="page-content">
 		<div class="education-grid-container">
 			<div class="education-grid-item">
-				<img src="../images/cornell_seal_simple_black.svg" class="education-image" title="cornell" alt="cornell">
+				<img src="./images/cornell_seal_simple_black.svg" class="education-image" title="cornell" alt="cornell">
 			</div>
 
 			<div class="education-grid-item">
@@ -83,7 +83,7 @@
 			</div>
 
 			<div class="education-grid-item">
-				<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
+				<img src="./images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
 			</div>
 
 			<div class="education-grid-item">
@@ -106,12 +106,12 @@
 
 	<footer>
 		<h3>Contact Me:</h3>
-		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email"
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/black-mail.png" title="email"
 				alt="email"></a>
-		<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github"
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/black-github.png" title="github"
 				alt="github"></a>
 		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
-				src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+				src="./images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
 	</footer>
 
 	<script>
@@ -120,11 +120,11 @@
 
 		function toggleLightDark(e) {
 			if (e.target.checked) {
-				theme.href = "../styles/dark-pages.css";
+				theme.href = "./styles/dark-pages.css";
 				document.cookie = 'theme=dark';
 			}
 			else {
-				theme.href = "../styles/light-pages.css";
+				theme.href = "./styles/light-pages.css";
 				document.cookie = 'theme=light';
 			}
 		}
@@ -137,11 +137,11 @@
 
 		function setTheme() {
 			if (isDark()) {
-				theme.href = "../styles/dark-pages.css";
+				theme.href = "./styles/dark-pages.css";
 				var t = document.getElementById("togBtn");
 				t.checked = true;
 			} else {
-				theme.href = "../styles/light-pages.css";
+				theme.href = "./styles/light-pages.css";
 				var t = document.getElementById("togBtn");
 				t.checked = false;
 			}
