--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <p><a href="views/aboutme.html"><strong>About Me</strong></a></p>
+            <p><a href="./aboutme.html"><strong>About Me</strong></a></p>
         </div>
 
         <div class="grid-item">
-            <p><a href="views/education.html"><strong>Education</strong></a></p>
+            <p><a href="./education.html"><strong>Education</strong></a></p>
         </div>
 
         <div class="grid-item">
-            <p><a href="views/experience.html"><strong>Experience</strong></a></p>
+            <p><a href="./experience.html"><strong>Experience</strong></a></p>
         </div>
 
         <div class="grid-item">
-            <p><a href="views/projects.html"><strong>Projects</strong></a></p>
+            <p><a href="./projects.html"><strong>Projects</strong></a></p>
         </div>
     </div>
 
