--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,7 @@
 	<link href="./styles/all-pages.css" rel="stylesheet">
 	<link href="./styles/light-pages.css" rel="stylesheet" id="theme-link">
 	<link href="./styles/toggle.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="./images/m.png" />
 </head>
 
 <body>
@@ -48,9 +49,6 @@
 	<div class="page-content">
 		<div class="aboutme-grid-container">
 			<div class="aboutme-grid-item">
-				<p><a href="./resources/resume.pdf" target="_blank">Resume</a> | <a href="https://github.com/militsasotirova"
-						target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a
-						href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
 				<br>
 				<p>Programming Languages:</p>
 				<ul>
@@ -67,19 +65,22 @@
 			</div>
 
 			<div class="aboutme-grid-item">
-				<p>Hello! My name is Militsa and I am a third year student at Cornell University (Engineering School)
-					pursuing a major in Computer Science
-					and a minor in Business. I've been interested in math and computer science since my freshman year of high
-					school at Thomas Jefferson High School for Science and Technology. </p>
-				<br>
-				<p>I'm currently working on <strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS),
+				<p><a href="./resources/resume.pdf" target="_blank">Resume</a> | <a href="https://github.com/militsasotirova"
+					target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a
+					href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
+					<br>
+				<p>Hello! I am a third year student at Cornell University (Engineering School)
+					pursuing a Computer Science major and a Business minor. I am interested in 
+					pursuing a career in parallel & distributed systems and/or security.
+					I'm currently working on the 
+					<strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS) project,
 					which
 					is a simulation that models nutrient flow through a farm system based on user inputs as well as published
 					research.
-					More information can be found <a href="./experience.html">here</a>.</p>
+					More information can be found <a href="./experience.html#rufas-card">here</a>.</p>
 				<br>
-				<p>Some of my hobbies include swimming, biking, playing spikeball, and other outdoor activities. I also like to
-					read and paint/sketch.
+				
+				<p>In my spare time, you can find me reading books, drawing, biking, and swimming.
 				</p>
 			</div>
 		</div>
@@ -87,12 +88,12 @@
 
 	<footer>
 		<h3>Contact Me:</h3>
-		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/black-mail.png" title="email"
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/mail.png" title="email"
 				alt="email"></a>
-		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/black-github.png" title="github"
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/github.png" title="github"
 				alt="github"></a>
-		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
-				src="./images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="./images/linkedin.png"
+				title="linkedin" alt="linkedin"></a>
 	</footer>
 
 	<script>
