--- a/education.html
+++ b/education.html
@@ -7,6 +7,7 @@
 	<link href="./styles/all-pages.css" rel="stylesheet">
 	<link href="./styles/light-pages.css" rel="stylesheet" id="theme-link">
 	<link href="./styles/toggle.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="./images/m.png" />
 </head>
 
 <body>
@@ -19,7 +20,7 @@
 			</div>
 		</label>
 
-		<a href="./index.html"><img src="../images/face.jpg" alt="headshot"></a>
+		<a href="./index.html"><img src="./images/face.jpg" alt="headshot"></a>
 		<a href="./index.html">
 			<h1>Militsa Sotirova</h1>
 		</a>
@@ -67,9 +68,6 @@
 					<li>Object-Oriented Design and Data Structures - Honors (CS 2112)</li>
 					<li>Discrete Structures (CS 2800)</li>
 					<li>The Computing Technology Inside Your Smartphone (ENGRI 1210)</li>
-					<li>Linear Algebra for Engineers (MATH 2940)</li>
-					<li>Multivariable Calculus for Engineers (MATH 1920)</li>
-					<li>Mechanics/Electromagnetism (PHYS 1112/2213)</li>
 					<br>
 					<li>Introduction to Game Theory (ECON 3801)</li>
 					<li>Futures, Options, and Financial Derivatives (AEM 4210)</li>
@@ -78,7 +76,6 @@
 					<li>Finance (HADM 2250)</li>
 					<li>Financial Accounting (AEM 2210)</li>
 					<br>
-					<li>Communicating Digital Identity (ENGRC 3025)</li>
 				</ul>
 			</div>
 
@@ -106,12 +103,12 @@
 
 	<footer>
 		<h3>Contact Me:</h3>
-		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/black-mail.png" title="email"
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/mail.png" title="email"
 				alt="email"></a>
-		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/black-github.png" title="github"
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/github.png" title="github"
 				alt="github"></a>
-		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
-				src="./images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="./images/linkedin.png"
+				title="linkedin" alt="linkedin"></a>
 	</footer>
 
 	<script>
