--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 	<link href="./styles/all-pages.css" rel="stylesheet">
 	<link href="./styles/light-pages.css" rel="stylesheet" id="theme-link">
 	<link href="./styles/toggle.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="./images/m.png" />
 </head>
 
 <body>
@@ -49,7 +50,7 @@
 			<div class="projects-grid-item">
 				<a class="project-card" href="https://github.com/militsasotirova/reading-level-analysis" target="_blank">
 					<div class="card">
-						<p><strong>Reading Level Analysis</strong></p>
+						<h2><strong>Reading Level Analysis</strong></h2>
 						<p>I created a reading level formula to analyze texts. I also built a
 							website using Python/CherryPy for users to input their own text and see
 							how my analysis compares to traditional ones.</p>
@@ -60,7 +61,7 @@
 			<div class="projects-grid-item">
 				<a class="project-card" href="https://github.com/CodingPerudo/rudo" target="_blank">
 					<div class="card">
-						<p><strong>Liar's Dice</strong></p>
+						<h2><strong>Liar's Dice</strong></h2>
 						<p>I designed and implemented an online version of a multiplayer
 							Liar's Dice (Perudo) game using Python and JavaScript with the
 							functionality of hosting mutiple game sessions.</p>
@@ -71,7 +72,7 @@
 			<div class="projects-grid-item">
 				<a class="project-card" href="https://github.com/militsasotirova/levenshtein" target="_blank">
 					<div class="card">
-						<p><strong>Levenshtein Edit Distance</strong></p>
+						<h2><strong>Levenshtein Edit Distance</strong></h2>
 						<p>I implemented a Go package to calculate the Levenshtein Edit
 							distance between two strings (number of single character edits to
 							transform one into the other) given by the user.
@@ -83,7 +84,7 @@
 				<a class="project-card" href="https://github.com/militsasotirova/currency-converter" target="_blank">
 					<div class="card">
 						<div class="container">
-							<p><strong>Currency Converter</strong></p>
+							<h2><strong>Currency Converter</strong></h2>
 							<p>I built a server using Go that hosts a website that converts currencies using the CurrencyLayer API.
 						</div>
 					</div>
@@ -95,12 +96,12 @@
 
 	<footer>
 		<h3>Contact Me:</h3>
-		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/black-mail.png" title="email"
+		<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="./images/mail.png" title="email"
 				alt="email"></a>
-		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/black-github.png" title="github"
+		<a href="https://github.com/militsasotirova" target="_blank"><img src="./images/github.png" title="github"
 				alt="github"></a>
-		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img
-				src="./images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+		<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="./images/linkedin.png"
+				title="linkedin" alt="linkedin"></a>
 	</footer>
 
 	<script>
