--- a/education.html
+++ b/education.html
@@ -54,28 +54,18 @@
 			<div class="education-grid-item">
 				<h2>Cornell University</h2>
 				<h3><strong>School of Engineering</strong>: B.S. Computer Science, Dyson Business minor</h3>
-				<p>August 2018 - December 2021</p>
-				<p>Ithaca, NY</p>
-				<p>Coursework:</p>
+				<h3>August 2018 - December 2021 in Ithaca, NY</h3>
+				<p>Relevant coursework for my computer science interests:</p>
 				<ul>
-					<li>Distributed Computing Principles (CS 5414)</li>
-					<li>Introduction to Computer Vision (CS 4670)</li>
-					<li>Operating Systems (CS 4410)</li>
-					<li>Introduction to Analysis of Algorithms (CS 4820)</li>
-					<li>Embedded Systems (CS 3420)</li>
-					<li>Data Structures and Functional Programming (CS 3110)</li>
-					<li>Digital Logic and Computer Organization (ENGRD 2300)</li>
-					<li>Object-Oriented Design and Data Structures - Honors (CS 2112)</li>
-					<li>Discrete Structures (CS 2800)</li>
-					<li>The Computing Technology Inside Your Smartphone (ENGRI 1210)</li>
-					<br>
-					<li>Introduction to Game Theory (ECON 3801)</li>
-					<li>Futures, Options, and Financial Derivatives (AEM 4210)</li>
-					<li>Market Dynamics, Computer Simulation and Modeling (AEM 4660)</li>
-					<li>Marketing Principles (HADM 2410)</li>
-					<li>Finance (HADM 2250)</li>
-					<li>Financial Accounting (AEM 2210)</li>
-					<br>
+					<li>Compilers & Compilers Practicum</li>
+					<li>Distributed Computing Principles</li>
+					<li>Cryptography</li>
+					<li>Computer Networks</li>
+					<li>Operating Systems</li>
+					<li>Computer Vision</li>
+					<li>Introduction to Analysis of Algorithms</li>
+					<li>Embedded Systems</li>
+					<li>Data Structures and Functional Programming</li>
 				</ul>
 			</div>
 
@@ -86,16 +76,16 @@
 			<div class="education-grid-item">
 				<h2>Thomas Jefferson High School for Science & Technology (TJHSST)</h2>
 				<h3><strong>Computer Systems</strong>: TJHSST Advanced Diploma</h3>
-				<p>August 2014 - May 2018</p>
-				<p>Alexandria, VA</p>
-				<p>Coursework:</p>
+				<h3>August 2014 - May 2018 in Alexandria, VA</h3>
+				<p>Relevant coursework:</p>
 				<ul>
-					<li>Computer Systems Research Lab</li>
+					<li>Computer Systems Research Lab: I conducted a research project of my
+					own design from start to finish, wrote a research paper, and presented my work. 
+					I created a formula to analyze the reading level
+				of texts and built a server & website for users to interact with it - I describe more detail on the <a href="./projects.html">Projects page</a> as well as the 
+				<a href="https://github.com/militsasotirova/reading-level-analysis">GitHub repository</a>.</li>
 					<li>Parallel Computing</li>
 					<li>Cryptography</li>
-					<li>Artificial Intelligence</li>
-					<li>Computer Vision</li>
-					<li>Mobile Application Development</li>
 				</ul>
 			</div>
 		</div>
