--- a/aboutme.html
+++ b/aboutme.html
@@ -70,7 +70,7 @@
 					href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
 					<br>
 				<p>Hello! I am a third year student at Cornell University (Engineering School)
-					pursuing a Computer Science major and a Business minor. I am interested in 
+					pursuing a Computer Science major and a Business minor. I am 
 					pursuing a career in parallel & distributed systems and/or security.
 					I'm currently working on the 
 					<strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS) project,
