--- a/experience.html
+++ b/experience.html
@@ -56,9 +56,9 @@
 				</div>
 
 				<div id="mongoModal" class="modal">
-					<div class="modal-content">
+					<div class="modal-content" style="text-align: center;">
 						<span class="close" id="mongoSpan">&times;</span>
-						<p>Incoming MongoDB Summer Intern</p>
+						<p><img class="mongo-gif" src="./images/intern_mongo.gif" alt="mongodb"></p>
 					</div>
 				</div>
 			</div>
