--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,10 @@
 			<div class="projects-grid-item">
 				<a class="project-card" href="https://github.com/militsasotirova/reading-level-analysis" target="_blank">
 					<div class="card">
-						<h2><strong>Reading Level Analysis</strong></h2>
+						<div>
+							<h2><strong>Reading Level Analysis</strong></h2>
+							<p style="float: right;"><img class="project-img" src="./images/open-book.png" alt="dice"></p>
+						</div>
 						<p>I created a reading level formula to analyze texts. I also built a
 							website using Python/CherryPy for users to input their own text and see
 							how my analysis compares to traditional ones.</p>
@@ -61,7 +64,10 @@
 			<div class="projects-grid-item">
 				<a class="project-card" href="https://github.com/CodingPerudo/rudo" target="_blank">
 					<div class="card">
-						<h2><strong>Liar's Dice</strong></h2>
+						<div>
+							<h2><strong>Liar's Dice</strong></h2>
+							<p style="float: right;"><img class="project-img" src="./images/dice.png" alt="dice"></p>
+						</div>
 						<p>I designed and implemented an online version of a multiplayer
 							Liar's Dice (Perudo) game using Python and JavaScript with the
 							functionality of hosting mutiple game sessions.</p>
@@ -72,7 +78,10 @@
 			<div class="projects-grid-item">
 				<a class="project-card" href="https://github.com/militsasotirova/levenshtein" target="_blank">
 					<div class="card">
-						<h2><strong>Levenshtein Edit Distance</strong></h2>
+						<div>
+							<h2><strong>Levenshtein Edit Distance</strong></h2>
+							<p style="float: right;"><img class="project-img" src="./images/abc-block.png" alt="dice"></p>
+						</div>
 						<p>I implemented a Go package to calculate the Levenshtein Edit
 							distance between two strings (number of single character edits to
 							transform one into the other) given by the user.
@@ -84,7 +93,10 @@
 				<a class="project-card" href="https://github.com/militsasotirova/currency-converter" target="_blank">
 					<div class="card">
 						<div class="container">
-							<h2><strong>Currency Converter</strong></h2>
+							<div>
+								<h2><strong>Currency Converter</strong></h2>
+								<p style="float: right;"><img class="project-img" src="./images/dollar.png" alt="dice"></p>
+							</div>
 							<p>I built a server using Go that hosts a website that converts currencies using the CurrencyLayer API.
 						</div>
 					</div>
