--- a/experience.html
+++ b/experience.html
@@ -51,9 +51,14 @@
 			<div class="experience-grid-item">
 				<div class="card" id="mongo">
 					<h2><strong>Incoming MongoDB Summer Intern</strong></h2>
+					
 					<p>June 2021 - August 2021</p>
-					<p>New York City</p>
+					<div style="display: flex;">
+					<p style="float: left;">New York City</p>
+
+					<p style="float: right; padding-left: 350px; "><img class="mongo-img" src="./images/mongo-logo.png" alt="dice"></p>
 				</div>
+					</div>
 
 				<div id="mongoModal" class="modal">
 					<div class="modal-content" style="text-align: center;">
@@ -70,6 +75,10 @@
 						<h2><strong>Ruminant Farm Systems Developer</strong></h2>
 						<p>November 2018 - PRESENT</p>
 						<p>Cornell University</p>
+
+						<div>
+							<p style="float: right;"><img class="project-img" src="./images/cow.png" alt="dice"></p>
+						</div>
 
 						<p>I am designing, developing, maintaining, and testing a Python application for nutrient flow
 							through a farm system. I collaborate with student team members and professors from universities
