--- a/education.html
+++ b/education.html
@@ -59,6 +59,9 @@
 				<ul>
 					<li>Compilers & Compilers Practicum</li>
 					<li>Distributed Computing Principles</li>
+					<li>System Security</li>
+					<li>Database Systems</li>
+					<li>The Structure of Info Networks</li>
 					<li>Cryptography</li>
 					<li>Computer Networks</li>
 					<li>Operating Systems</li>
